--- a/package.json
+++ b/package.json
@@ -15,19 +15,15 @@
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
-    "start": "node build/index.js",
-    "start:sse": "node build/index.js --sse"
+    "start": "node build/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.0",
-    "mcp-proxy": "^2.11.0",
-    "ssh2": "^1.16.0",
-    "yargs": "^17.7.2"
+    "ssh2": "^1.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/ssh2": "^1.15.4",
-    "@types/yargs": "^17.0.33",
     "typescript": "^5.3.3"
   }
 }
